--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,8 @@
 <section>
-  <h1>About Me</h1>
-  <p>Hi</p>
+  <h1>External</h1>
+  <ul>
+      <li>twitter: <a href="http://twitter.com/markmossberg">@markmossberg</a></li>
+      <li>github: <a href="http://github.com/mossberg">@mossberg</a></li>
+      <li>email: <a href="mailto:mark.mossberg@gmail.com">mark.mossberg@gmail</a></li>
+  </ul>
 </section>
