Add little promo line at the bottom of posts

--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -8,6 +8,9 @@ single: true
   {% include article.html %}
   <footer>
     <p class="meta">
+    If you liked this post, follow me on
+    <a href="http://twitter.com/markmossberg">Twitter</a>
+    and <a href="http://github.com/mossberg">GitHub</a>!<br>
       {% include post/author.html %}
       {% include post/date.html %}{{ time }}{% if updated %} {{ updated }}{% endif %}
       {% include post/categories.html %}
